Fixed issues with proceeding content after parallax hero image when not wrapped in parallax class element. (Card: https://trello.com/c/v1eN1Xov)

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -3074,10 +3074,10 @@ nav .nav-button {
         margin-bottom: -20rem; } }
 
 /* Panel Hero Parallax */
-.parallax .parallax-container {
+.parallax-container {
   position: relative;
   z-index: 0; }
-  .parallax .parallax-container + * {
+  .parallax-container + * {
     position: relative; }
 
 /* Specific Panels */
