--- a/public/static/scss/layout/_panel.scss
+++ b/public/static/scss/layout/_panel.scss
@@ -134,13 +134,11 @@
 }
 
 /* Panel Hero Parallax */
-.parallax {
-	& &-container {
+.parallax-container {
+	position: relative;
+	z-index: 0;
+	& + * {
 		position: relative;
-		z-index: 0;
-		& + * {
-			position: relative;
-		}
 	}
 }
 
